增加移动端滑动手势事件适配

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+// 页面最大化，用于滑动手势事件
+html {
+    height: 100%;
+}
+
 // 页面公共样式
 body {
     font: bold 20px "Courier";
